- In payment request form, for the admin area drop-down field, show admin areas' complete names rather than codes.

- If available, show the names in the device's language,
otherwise, show in the default language for that country.

Exp: Show Quebec and not QC, and show Québec
if the device's language is set to French.

- If the name of the admin area for a country
is not available, show the admin area code.

- Change the unit-tests accordingly.

BUG=691643

Review-Url: https://codereview.chromium.org/2966103002
Cr-Commit-Position: refs/heads/master@{#485338}

Former-commit-id: 51456a9609172d3f8a803c056c1789a55b52fd60